--- a/c++/slam/CMakeLists.txt
+++ b/c++/slam/CMakeLists.txt
@@ -14,6 +14,14 @@ if(${CMAKE_SYSTEM_PROCESSOR} STREQUAL "x86_64")
     message("building for x86_64")
 endif()
 
+#OpenGL
+find_package(OpenGL REQUIRED)
+#GLUT
+find_package(GLUT REQUIRED)
+
 add_executable(slam ${PROJECT_SOURCE_DIR}/src/main.cpp)
+
+# Link stage
+target_link_libraries(slam ${OPENGL_LIBRARIES} ${GLUT_LIBRARIES} )
 # target_link_libraries(slam PUBLIC opengl)
 # target_include_directories(slam PUBLIC include)
