--- a/c++/slam/CMakeLists.txt
+++ b/c++/slam/CMakeLists.txt
@@ -6,8 +6,16 @@ project(slam)
 file(MAKE_DIRECTORY ${PROJECT_SOURCE_DIR}/bin)
 set(CMAKE_RUNTIME_OUTPUT_DIRECTORY "${PROJECT_SOURCE_DIR}/bin")
 
+#RealSense2
+find_package(realsense2 REQUIRED)
+
+add_executable(slam ${PROJECT_SOURCE_DIR}/src/main.cpp)
+
 if(${CMAKE_SYSTEM_PROCESSOR} STREQUAL "aarch64")
     message("building for aarch64")
+    find_package( OpenCV REQUIRED )
+    include_directories( ${OpenCV_INCLUDE_DIRS} )
+    target_link_libraries(slam ${OpenCV_LIBS} realsense2)
 endif()
 
 if(${CMAKE_SYSTEM_PROCESSOR} STREQUAL "x86_64")
@@ -20,12 +28,9 @@ endif()
 #GLUT
 #find_package(GLUT REQUIRED)
 
-#RealSense2
-find_package(realsense2 REQUIRED)
 
-add_executable(slam ${PROJECT_SOURCE_DIR}/src/main.cpp)
 
 # Link stage
-target_link_libraries(slam ${OPENGL_LIBRARIES} ${GLUT_LIBRARIES} realsense2)
+#target_link_libraries(slam ${OPENGL_LIBRARIES} ${GLUT_LIBRARIES} realsense2)
 # target_link_libraries(slam PUBLIC opengl)
 # target_include_directories(slam PUBLIC include)
