--- a/c++/slam/CMakeLists.txt
+++ b/c++/slam/CMakeLists.txt
@@ -2,12 +2,13 @@ cmake_minimum_required(VERSION 3.3)
 set(CMAKE_CXX_STANDARD 14)
 set(CMAKE_CXX_STANDARD_REQUIRED TRUE)
 project(slam)
-set(ENTRY_FILE "ir.cpp")
+set(ENTRY_FILE "main.cpp")
 
 file(MAKE_DIRECTORY ${PROJECT_SOURCE_DIR}/bin)
 set(CMAKE_RUNTIME_OUTPUT_DIRECTORY "${PROJECT_SOURCE_DIR}/bin")
+set(INCLUDE_DIRS "./include")
 
-add_executable(slam ${PROJECT_SOURCE_DIR}/src/${ENTRY_FILE})
+add_executable(slam ${PROJECT_SOURCE_DIR}/src/${ENTRY_FILE} ${PROJECT_SOURCE_DIR}/src/FrameProcessor.cpp)
 
 if(${CMAKE_SYSTEM_PROCESSOR} STREQUAL "aarch64")
     message("\nbuilding for aarch64")
@@ -15,7 +16,7 @@ if(${CMAKE_SYSTEM_PROCESSOR} STREQUAL "aarch64")
     find_package( OpenCV 4.0.0 REQUIRED )
     #RealSense2
     find_package(realsense2 REQUIRED)
-    include_directories( ${OpenCV_INCLUDE_DIRS} )
+    target_include_directories( ${OpenCV_INCLUDE_DIRS} ${INCLUDE_DIRS})
     target_link_libraries(slam ${OpenCV_LIBS} realsense2)
 endif()
 
@@ -27,7 +28,7 @@ if(${CMAKE_SYSTEM_PROCESSOR} STREQUAL "x86_64")
     #target_link_libraries(main PRIVATE realsense2::fw realsense2::rsutils realsense2::realsense2 realsense2::realsense-file)
     # opencv
     find_package( OpenCV REQUIRED )
-    include_directories( ${OpenCV_INCLUDE_DIRS} )
+    target_include_directories( slam ${OpenCV_INCLUDE_DIRS} ${INCLUDE_DIRS})
     target_link_libraries( slam ${OpenCV_LIBS} realsense2 )
 endif()
 
